samples/_failures_safe/1761709131_6a780f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fee7d46a.c: In function ‘main’:
./samples/SAFE/__tmp_fee7d46a.c:150:9: error: expected expression at end of input
  150 |         } else if (choice >= 1 && choice <= num_operations)
      |         ^
./samples/SAFE/__tmp_fee7d46a.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fee7d46a.c:150:9: error: expected declaration or statement at end of input
